use Promise.all in onPageLoad; add attributions in comments

--- a/src/client/assets/stylesheets/index.css
+++ b/src/client/assets/stylesheets/index.css
@@ -75,6 +75,7 @@ p {
   font-size: 18px;
 }
 
+/* found method for glossy buttons at https://www.hongkiat.com/blog/css3-glossy-effect/*/
 .button {
   font-family: 'Faster One', cursive;
   width: 250px;
